# acolor

./: Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
acolor/: main.py
src/: main.py
